Create Riff Raff artifact for deployment